Documentation and examples: http://mapping.referata.com/wiki/Maps

== Maps change log ==
This change log contains a list of completed to-do's (new features, bug fixes, refactoring) for every
version of Maps. You can find the most up-do-date version at
http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log


=== Maps 0.7.2 ===
(2010-10-2x)

==== Bug fixes ====

* Fixed incompatibility with MW 1.15.x.

* Fixed incorect parsing of certain DM and DMS coordinates.

* Fixed small layout issue with pop-ups in Google Maps.

=== Maps 0.7.1 ===
(2010-10-20)

==== New features ====

* Image layers for OpenLayers maps, defined via pages in the Layer namespace.

==== Bug fixes ====

* Support for images without namespace prefix in the display points parser hook.

* Fixed layer oder for OpenLayers maps.

==== Internal improvements ====

* Rewrote OpenLayers layer handling.

=== Maps 0.7 ===
(2010-10-15)

==== New features ====

* Tag support for these parser hooks (which previously only had parser function support):
** Coordinates
** Distance
** Finddestination
** Geocode
** Geodistance

* Thumbs and photos parameters for the OSM service.

==== Bug fixes ====

* Fixed compatibility with the MW 1.17 resource loader.

* Fixed i18n issue with the overlays control for Google Maps v2 maps.

* Fixed default zoom level for Yahoo! Maps maps.

* Increased the maximum decimals for DMS coordinates from 2 to 20.

==== Removed features ====

* #geocodelong and #geocodelat parser functions - you can obtain their functionality using #geocode.

==== Internal improvements ====

* Rewrote the geocoding functionality. It's now an integral part of the extension that can not be just pulled out,
while the reverse is true for individual geocoders. Geocoder interaction now uses the same model as mapping
service interaction.
  
* Use of Validator 0.4, allowing for more robust and consistent error reporting.

* Rewrote the parser hooks to use the ParserHook class provided by Validator.
